raspbian/rules.v4
# Generated by iptables-save v1.8.7 on Wed Apr 12 21:07:33 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [712:40061]
:OUTPUT ACCEPT [4027:763305]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --sport 53 --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 5353 -j ACCEPT
-A INPUT -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A INPUT -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -p udp -m udp --sport 137 --dport 137 -j ACCEPT
-A INPUT -p udp -m udp --sport 138 --dport 138 -j ACCEPT
# -A INPUT -p udp -m udp --dport 51820 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -j ACCEPT
-A INPUT -s 10.8.0.0/24 -j ACCEPT -m comment --comment "OpenVPN"
-A INPUT -s 172.17.0.0/24 -j ACCEPT -m comment --comment "Docker"
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7
-A INPUT -j REJECT --reject-with icmp-port-unreachable
COMMIT
